--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="dashboard.html" class="image featured"><img src="images/dashboard.jpg" alt="" /></a>
+								<a href="dashboard.html" class="image featured"><img src="images/segmentation_dashboard.jpeg" alt="" /></a>
 								<h3><a href="dashboard.html">Customer segmentation visuallization</a></h3>
 								<p>Visuallizing groups of customer and correlations</p>
 							</article>
