--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Data Analysis Assistant</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,26 @@
 			}
 			.row > .col-7-large {
 				width: 50.33333%;
+			}@media screen and (max-width: 500px) {
+
+			.container {
+				width: 100%;
+				max-width: calc(100% - 30px);
 			}
+
+				.container.medium {
+					width: 100%;
+				}
+				.row > .col-4 {
+					width: 90%;
+					margin: auto;
+				}
+				.row > .col-7-large {
+					width: 90%;
+					margin: auto;
+				}
+
+		}
 		</style>
 	</head>
 	<body class="is-preload">
