--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 					width: 90%;
 					margin: auto;
 				}
+				li.contact,
+				a.contact,
+				span.contact{
+					font-size: 15px;
+				}
+				ul.contact{
+					font-size: 15px;
+				}
 
 		}
 		</style>
