--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 				a.contact,
 				span.contact{
 					font-size: 15px;
+					text-decoration: none;
 				}
 				ul.contact{
 					font-size: 15px;
